fixed nav alignment for mobile responsiveness

--- a/css/jkstyle.css
+++ b/css/jkstyle.css
@@ -9,6 +9,10 @@ body {
     padding: 15px;
     color: #222222;
 }
+.navbar > .centra {
+    max-width: 900px;
+    margin: 0 auto;
+}
 .menu {
     border-radius: 20px;
     background-color: #00c2c7;
@@ -67,15 +71,13 @@ body {
     padding: 25px;
     text-align: left;
 }
-.navbar > .centra {
-    max-width: 900px;
-    margin: 0 auto;
-}
 .main > .centra {
     max-width: 900px;
     margin: 0 auto;
 }
-
+.col {
+    padding: 0;
+}
 /* media */
 .photoV {
     max-width:230px; 
